# poincare-embedding

./: CMakeLists.txt  LICENSE  README.md  requirements.txt
include/: poincare_embedding.hpp
scripts/: create_mammal_subtree.py  create_wordnet_noun_hierarchy.py  plot_mammal_subtree.py  plot_tree.py  rank_norm.py
src/: poincare_embedding.cpp
